[package]
name = "code-agent-usage-monitor"
version = "1.0.15"
edition = "2021"
license = "MIT"
description = "Windows taskbar widget for monitoring Claude and Codex code-agent usage and rate limits"
homepage = "https://github.com/jacobdwyer16/code-agent-usage-monitor"
repository = "https://github.com/jacobdwyer16/code-agent-usage-monitor"

[package.metadata.winres]
CompanyName = "Jacob Dwyer"
ProductName = "Code Agent Usage Monitor"
FileDescription = "Windows taskbar widget for monitoring code agent usage and rate limits"
OriginalFilename = "code-agent-usage-monitor.exe"
InternalName = "CodeAgentUsageMonitor"
Comments = "Forked from CodeZeno/Claude-Code-Usage-Monitor"
LegalCopyright = "Copyright (C) 2026 Jacob Dwyer. Forked from Code Zeno Pty Ltd."

[dependencies]
ureq = { version = "2", default-features = false, features = ["native-tls", "json"] }
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
]

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
